@@ -24,6 +24,8 @@ v0.10.34.3
     - added animateDuringGame to turn off animated marquee animation during game launch (monkofthefunk)
     - fixed case where 3 games in a menu with 4 each side of selected would dysync from selected relodables (monkofthefunk)
     - fixed global favorites adding and removing and how it affects current collection's favorites list (monkofthefunk)
+    - fixed using mp3 in video element (monkofthefunk)
+    - added settings control toggle and settingsCollectionPlaylist to determine what collection/playlist it's in (monkofthefunk)
 
 v0.10.34.2
     - update version *.2 (monkofthefunk)
